Fixed nav bar cutting out of screen
The top nav bar where the name used to appear was getting cut out of the screen. Now it is fixed and the page scales properly.
Also made a change to the way the drop down menus open. If the notification drop down menu is open and you click on the second menu next to it, the notification menu will close and vice versa. This was done to prevent overlap of the menus.

--- a/stylesheets/styles_home.css
+++ b/stylesheets/styles_home.css
@@ -479,11 +479,17 @@ textarea{
     background-color: rgb(218, 218, 218);
 }
 
+.wrapper{
+    width:300vh;
+    
+}
+
+
 .notDropDown{
 
     
-    display: inline;
-    margin-left: 1250px;
+   
+    float: right;
     position: relative;
     
    
@@ -494,10 +500,11 @@ textarea{
     width:350px;
     height: wrap;
     min-height: 100px;
-    margin-left: 1320px;
+    float: right;
     color: black;
     z-index: 1;
     position: fixed;
+   
     
 
 }
